--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,13 @@
 {
-    "name": "jucksearm/php-barcode",
-    "description": "Barcode Generation Package inspired by Nicola Asuni.",
+    "name": "tobiascapin/php-barcode",
+    "description": "Fork of Jucksearm Barcode Generation Package inspired by Nicola Asuni.",
     "keywords": ["barcode","qrcode","QR Code","CODE 128","DATAMATRIX","PDF417","php barcode"],
     "type": "library",
     "license": "LGPL-3.0-or-later",
     "authors": [
         {
-            "name": "Jucksearm",
-            "email": "jucksearm.bkk@gmail.com"
+            "name": "Tobia Scapin",
+            "email": ""
         }
     ],
     "minimum-stability": "stable",
