--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "authors": [
         {
             "name": "Tobia Scapin",
-            "email": ""
+            "email": "xxx@xxx.xxx"
         }
     ],
     "minimum-stability": "stable",
